--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="nav_bought_list_str">我的订单</string>
+    <string name="nav_profile_str">修改资料</string>
+    <string name="nav_logoff_str">注销</string>
 </resources>
