--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">Movie4Share</string>
+    <string name="app_name_EN">Movie4Share</string>
+    <string name="app_name">影片分享小站</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
@@ -15,7 +16,6 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
-    <string name="title_activity_main">影片分享小站</string>
 
     <string name="home">Home</string>
 
@@ -29,7 +29,7 @@
     <string name="nav_bought_list_str">我的订单</string>
     <string name="nav_profile_str">修改资料</string>
     <string name="nav_logoff_str">注销</string>
-    <string name="movie_search">电影搜索</string>
+    <string name="movie_search">电影片名搜索</string>
     <string name="movie_type_action">动作片</string>
     <string name="more">更多 ＞</string>
     <string name="movie_type_love">爱情片</string>
